src/lib/libJKFactory/ga-5-3b/python/ga4py/gah.pxd

    double        NGA_Ddot_patch(int g_a, char t_a, int alo[], int ahi[], int g_b, char t_b, int blo[], int bhi[])
    void          NGA_Distribution(int g_a, int iproc, int lo[], int hi[])
    int           NGA_Duplicate(int g_a, char* array_name)
    void          NGA_Error(char *str, int code)
    float         NGA_Fdot_patch(int g_a, char t_a, int alo[], int ahi[], int g_b, char t_b, int blo[], int bhi[])
    void          NGA_Fence()
    void          NGA_Fill(int g_a, void *value)
    void          NGA_Fill_patch(int g_a, int lo[], int hi[], void *val)
    void          NGA_Gather(int g_a, void *v, int* subsArray[], int n)
    void          NGA_Gather_flat(int g_a, void *v, int subsArray[], int n)
    void          NGA_Get(int g_a, int lo[], int hi[], void* buf, int ld[])
    void          NGA_Get_block_info(int g_a, int num_blocks[], int block_dims[])
    int           NGA_Get_debug()
    int           NGA_Get_dimension(int g_a)
    void          NGA_Get_field(int g_a, int *lo, int *hi, int foff, int fsize, void *buf, int *ld)
    void          NGA_Get_ghost_block(int g_a, int lo[], int hi[], void *buf, int ld[])
    int           NGA_Get_pgroup(int g_a)
    int           NGA_Get_pgroup_size(int grp_id)
    void          NGA_Get_proc_grid(int g_a, int dims[])
    void          NGA_Get_proc_index(int g_a, int iproc, int subscript[])
    int           NGA_Has_ghosts(int g_a)
    int           NGA_Idot_patch(int g_a, char t_a, int alo[], int ahi[], int g_b, char t_b, int blo[], int bhi[])
    void          NGA_Init_fence()
    void          NGA_Initialize()
    void          NGA_Initialize_ltd(size_t limit)
    void          NGA_Inquire(int g_a, int *type, int *ndim, int dims[])
    size_t        NGA_Inquire_memory()
    char*         NGA_Inquire_name(int g_a)
    int           NGA_Is_mirrored(int g_a)
    void          NGA_List_nodeid(int *list, int nprocs)
    long          NGA_Ldot_patch(int g_a, char t_a, int alo[], int ahi[], int g_b, char t_b, int blo[], int bhi[])
    long long     NGA_Lldot_patch(int g_a, char t_a, int alo[], int ahi[], int g_b, char t_b, int blo[], int bhi[])
    int           NGA_Locate(int g_a, int subscript[])
    int           NGA_Locate_num_blocks(int g_a, int lo[], int hi[])
    int           NGA_Locate_nnodes(int g_a, int lo[], int hi[])
    int           NGA_Locate_region(int g_a,int lo[],int hi[],int map[],int procs[])
    void          NGA_Lock(int mutex)
    void          NGA_Mask_sync(int first, int last)
    void          NGA_Matmul_patch(char transa, char transb, void* alpha, void *beta, int g_a, int alo[], int ahi[], int g_b, int blo[], int bhi[], int g_c, int clo[], int chi[])
    size_t        NGA_Memory_avail()
    int           NGA_Memory_limited()
    void          NGA_Merge_distr_patch(int g_a, int alo[], int ahi[], int g_b, int blo[], int bhi[])
    void          NGA_Merge_mirrored(int g_a)
    void          NGA_Nblock(int g_a, int *nblock)
    void          NGA_NbAcc(int g_a,int lo[], int hi[],void* buf,int ld[],void* alpha, ga_nbhdl_t* nbhandle)
    void          NGA_NbGet_ghost_dir(int g_a, int mask[], ga_nbhdl_t* handle)
    void          NGA_NbGet(int g_a, int lo[], int hi[], void* buf, int ld[], ga_nbhdl_t* nbhandle)
    void          NGA_Nbget_field(int g_a, int *lo, int *hi, int foff, int fsize,void *buf, int *ld, ga_nbhdl_t *nbhandle)
    void          NGA_Nbput_field(int g_a, int *lo, int *hi, int foff, int fsize, void *buf, int *ld, ga_nbhdl_t *nbhandle)
    void          NGA_NbPut(int g_a, int lo[], int hi[], void* buf, int ld[], ga_nbhdl_t* nbhandle)
    int           NGA_NbTest(ga_nbhdl_t* nbhandle)
    void          NGA_NbWait(ga_nbhdl_t* nbhandle)
    int           NGA_Ndim(int g_a)
    int           NGA_Nnodes()
    int           NGA_Nodeid()
    void          NGA_Periodic_acc(int g_a, int lo[], int hi[],void* buf,int ld[],void* alpha)
    void          NGA_Periodic_get(int g_a, int lo[], int hi[], void* buf, int ld[])
    void          NGA_Periodic_put(int g_a, int lo[], int hi[], void* buf, int ld[])
    int           NGA_Pgroup_absolute_id(int pgroup, int pid)
    int           NGA_Pgroup_create(int *list, int count)
    int           NGA_Pgroup_destroy(int grp)
    int           NGA_Pgroup_get_default()
    int           NGA_Pgroup_get_mirror()
    int           NGA_Pgroup_get_world()
    int           NGA_Pgroup_nnodes(int grp_id)
    int           NGA_Pgroup_nodeid(int grp_id)
    void          NGA_Pgroup_set_default(int p_handle)
    int           NGA_Pgroup_split(int grp_id, int num_group)
    int           NGA_Pgroup_split_irreg(int grp_id, int color)
    void          NGA_Pgroup_sync(int grp_id)
    void          NGA_Print_patch(int g_a, int lo[], int hi[], int pretty)
    void          NGA_Proc_topology(int g_a, int proc, int coord[])
    void          NGA_Put(int g_a, int lo[], int hi[], void* buf, int ld[])
    void          NGA_Put_field(int g_a, int *lo, int *hi, int foff, int fsize, void *buf, int *ld)
    void          NGA_Randomize(int g_a, void *value)
    long          NGA_Read_inc(int g_a, int subscript[], long inc)
    int           NGA_Register_type(size_t bytes)
    void          NGA_Release_block_grid(int g_a, int index[])
    void          NGA_Release_block(int g_a, int idx)
    void          NGA_Release_block_segment(int g_a, int idx)
    void          NGA_Release_ghost_element(int g_a, int index[])
    void          NGA_Release_ghosts(int g_a)
    void          NGA_Release(int g_a, int lo[], int hi[])
    void          NGA_Release_update_block_grid(int g_a, int index[])
    void          NGA_Release_update_block(int g_a, int idx)
    void          NGA_Release_update_block_segment(int g_a, int idx)
    void          NGA_Release_update_ghost_element(int g_a, int index[])
    void          NGA_Release_update_ghosts(int g_a)
    void          NGA_Release_update(int g_a, int lo[], int hi[])
    void          NGA_Scale_patch(int g_a, int lo[], int hi[], void *alpha)
    void          NGA_Scatter_acc(int g_a, void *v, int* subsArray[], int n, void *alpha)
    void          NGA_Scatter_acc_flat(int g_a, void *v, int subsArray[], int n, void *alpha)
    void          NGA_Scatter(int g_a, void *v, int* subsArray[], int n)
    void          NGA_Scatter_flat(int g_a, void *v, int subsArray[], int n)
    void          NGA_Select_elem(int g_a, char* op, void* val, int *index)
    void          NGA_Set_array_name(int g_a, char *name)
    void          NGA_Set_block_cyclic(int g_a, int dims[])
    void          NGA_Set_block_cyclic_proc_grid(int g_a, int block[], int proc_grid[])
    void          NGA_Set_chunk(int g_a, int chunk[])
    void          NGA_Set_data(int g_a, int ndim, int dims[], int type)
    void          NGA_Set_debug(int flag)
    void          NGA_Set_ghosts(int g_a, int width[])
    void          NGA_Set_irreg_distr(int g_a, int map[], int block[])
    void          NGA_Set_irreg_flag(int g_a, int flag)
    void          NGA_Set_memory_limit(size_t limit)
    void          NGA_Set_pgroup(int g_a, int p_handle)
    void          NGA_Set_restricted(int g_a, int list[], int size)
    void          NGA_Set_restricted_range(int g_a, int lo_proc, int hi_proc)
    void          NGA_Strided_acc(int g_a, int lo[], int hi[], int skip[], void* buf, int ld[], void *alpha)
    void          NGA_Strided_get(int g_a, int lo[], int hi[], int skip[], void* buf, int ld[])
    void          NGA_Strided_put(int g_a, int lo[], int hi[], int skip[], void* buf, int ld[])
    void          NGA_Sync()
    void          NGA_Terminate()
    int           NGA_Total_blocks(int g_a)
    void          NGA_Unlock(int mutex)
    int           NGA_Update_ghost_dir(int g_a, int dimension, int idir, int flag)
    int           NGA_Uses_ma()
    int           NGA_Uses_proc_grid(int g_a)
    int           NGA_Valid_handle(int g_a)
    int           NGA_Verify_handle(int g_a)
    DoubleComplex NGA_Zdot_patch(int g_a, char t_a, int alo[], int ahi[], int g_b, char t_b, int blo[], int bhi[])
    void          NGA_Zero_patch(int g_a, int lo[], int hi[])
    void          GA_Abs_value_patch64(int g_a, int64_t *lo, int64_t *hi)
    void          GA_Add_constant_patch64(int g,int64_t *lo,int64_t *hi,void *alpha)
    void          GA_Cgemm64(char ta, char tb, int64_t m, int64_t n, int64_t k, SingleComplex alpha, int g_a, int g_b, SingleComplex beta, int g_c )
    void          GA_Dgemm64(char ta, char tb, int64_t m, int64_t n, int64_t k, double alpha, int g_a, int g_b, double beta, int g_c )
    void          GA_Elem_divide_patch64(int g_a, int64_t alo[], int64_t ahi[], int g_b, int64_t blo[], int64_t bhi[], int g_c, int64_t  clo[], int64_t chi[])
    void          GA_Elem_maximum_patch64(int g_a,int64_t *alo,int64_t *ahi, int g_b,int64_t *blo,int64_t *bhi, int g_c,int64_t *clo,int64_t *chi)
    void          GA_Elem_minimum_patch64(int g_a,int64_t *alo,int64_t *ahi, int g_b,int64_t *blo,int64_t *bhi, int g_c,int64_t *clo,int64_t *chi)
    void          GA_Elem_multiply_patch64(int g_a, int64_t alo[], int64_t ahi[], int g_b, int64_t blo[], int64_t bhi[], int g_c, int64_t clo[], int64_t chi[])
    void          GA_Matmul_patch64(char transa, char transb, void* alpha, void *beta, int g_a, int64_t ailo, int64_t aihi, int64_t ajlo, int64_t ajhi, int g_b, int64_t bilo, int64_t bihi, int64_t bjlo, int64_t bjhi, int g_c, int64_t cilo, int64_t cihi, int64_t cjlo, int64_t cjhi)
    void          GA_Median_patch64(int g_a, int64_t *alo, int64_t *ahi, int g_b, int64_t *blo, int64_t *bhi, int g_c, int64_t *clo, int64_t *chi, int g_m, int64_t *mlo, int64_t *mhi)
    void          GA_Pack64(int g_src, int g_dest, int g_mask, int64_t lo, int64_t hi, int64_t *icount)
    void          GA_Pack(int g_src, int g_dest, int g_mask, int lo, int hi, int *icount)
    void          GA_Patch_enum64(int g_a, int64_t lo, int64_t hi, void *start, void *inc)
    void          GA_Patch_enum(int g_a, int lo, int hi, void *start, void *inc)
    void          GA_Recip_patch64(int g_a,int64_t *lo, int64_t *hi)
    void          GA_Scan_add64(int g_a, int g_b, int g_sbit, int64_t lo, int64_t hi, int excl)
    void          GA_Scan_copy64(int g_a, int g_b, int g_sbit, int64_t lo, int64_t hi)
    void          GA_Set_chunk64(int g_a, int64_t chunk[])
    void          GA_Set_data64(int g_a, int ndim, int64_t dims[], int type)
    void          GA_Set_ghosts64(int g_a, int64_t width[])
    void          GA_Set_irreg_distr64(int g_a, int64_t map[], int64_t block[])
    void          GA_Sgemm64(char ta, char tb, int64_t m, int64_t n, int64_t k, float alpha, int g_a, int g_b, float beta,  int g_c )
    void          GA_Step_bound_info_patch64(int g_xx, int64_t xxlo[], int64_t xxhi[], int g_vv, int64_t vvlo[], int64_t vvhi[], int g_xxll, int64_t xxlllo[], int64_t xxllhi[], int64_t g_xxuu,  int64_t xxuulo[], int64_t xxuuhi[], void *boundmin, void *wolfemin, void *boundmax)
    void          GA_Step_max_patch64(int g_a, int64_t alo[], int64_t  ahi[], int g_b, int64_t blo[], int64_t  bhi[], void *step)
    void          GA_Unpack64(int g_src, int g_dest, int g_mask, int64_t lo, int64_t hi, int64_t *icount)
    void          GA_Unpack(int g_src, int g_dest, int g_mask, int lo, int hi, int *icount)
    void          GA_Zgemm64(char ta, char tb, int64_t m, int64_t n, int64_t k, DoubleComplex alpha, int g_a, int g_b, DoubleComplex beta, int g_c )
    void          NGA_Acc64(int g_a, int64_t lo[], int64_t hi[],void* buf,int64_t ld[],void* alpha)
    void          NGA_Access64(int g_a, int64_t lo[], int64_t hi[], void *ptr, int64_t ld[])
    void          NGA_Access_block64(int g_a, int64_t idx, void *ptr, int64_t ld[])
    void          NGA_Access_block_grid64(int g_a, int64_t index[], void *ptr, int64_t ld[])
    void          NGA_Access_block_segment64(int g_a, int proc, void *ptr, int64_t *len)
    void          NGA_Access_ghost_element64(int g_a,  void *ptr, int64_t subscript[], int64_t ld[])
